--- a/1-4/HTML/index.html
+++ b/1-4/HTML/index.html
@@ -18,6 +18,7 @@
                 <div class="right2"></div>
                 <div class="left2">
                     <div class="top2"></div>
+                    <div class="bottom2"></div>
                 </div>
             </div>
             <div class="bottom"></div>
